Create a LoginPage layout

--- a/src/WebShop.WebUI/Pages/Loginpage/LoginPage.cshtml
+++ b/src/WebShop.WebUI/Pages/Loginpage/LoginPage.cshtml
@@ -6,7 +6,7 @@
 <h1>LoginPage</h1>
 <form method="post">
     <input type="text" asp-for="login.Username" placeholder="Username" />
-    <input type="text" asp-for="login.Password" placeholder="Password" />
+    <input type="password" asp-for="login.Password" placeholder="Password" />
     <button type="submit">Submit</button>
 </form>
 
