Add identity membership system

--- a/src/WebShop.WebUI/Pages/Loginpage/LoginPage.cshtml
+++ b/src/WebShop.WebUI/Pages/Loginpage/LoginPage.cshtml
@@ -87,6 +87,7 @@
                     <tr>
                         <td></td>
                         <td>
+                            <button asp-action="Register">Register</button>
                             <button class="button" type="submit">Submit</button>
                         </td>
                     </tr>
