--- a/src/WebShop.WebUI/Pages/Menu.cshtml
+++ b/src/WebShop.WebUI/Pages/Menu.cshtml
@@ -18,7 +18,7 @@
         <nav id="sidebar" class="sidebar-wrapper">
             <div class="sidebar-content">
                 <div class="sidebar-brand">
-                    <a href="#">pro sidebar</a>
+                    <a href="#">MANAGEMENT PANEL</a>
                     <div id="close-sidebar">
                         <i class="fas fa-times"></i>
                     </div>
@@ -84,7 +84,7 @@
                         <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fa fa-shopping-cart"></i>
-                                <span>Offerts</span>
+                                <span>Offers</span>
                                 <span class="badge badge-pill badge-danger">3</span>
                             </a>
                             <div class="sidebar-submenu">
